# pace2025

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
cmake/modules/: FindGUROBI.cmake  FindORTOOLS.cmake
ext/: .gitignore  build-uwrmaxsat.sh
include/: MomC.cc  cxxopts.h  exactsolver.hpp  ogdf_cliquesolver.h  ogdf_instance.hpp  ogdf_solver.hpp  ogdf_subsetrefine.hpp  ogdf_treewidth.h  ogdf_util.hpp  partition.hpp  preprocessing.hpp  readinstance.hpp  util.hpp
include/ext/: matching.hpp
instances/test/: twins.gr
playground/c++/: CMakeLists.txt  collectresults.py  compilescript.sh  compilescriptdebug.sh  runcluster.py  runclusterhs.py  runscript.sh
playground/c++/cmake/modules/: FindGUROBI.cmake
playground/c++/ext/: .gitignore  build-ogdf.sh  build-uwrmaxsat.sh
playground/c++/include/: MomC.cc  exactsolver.hpp  heuristics.hpp  hopcroftcarp.hpp  instance.hpp  matching.hpp  ogdf.hpp  ogdf_cliquesolver.h  ogdf_greedy.hpp  ogdf_instance.hpp  ogdf_maxsat.hpp  ogdf_solver.hpp  ogdf_subsetrefine.hpp  ogdf_treewidth.h  ogdf_util.hpp  partition.hpp  preprocessing.hpp  readinstance.hpp  util.hpp
playground/c++/src/: exactsolver.cpp  heuristics.cpp  main.cpp  ogdf_greedy.cpp  ogdf_instance.cpp  ogdf_io.cpp  ogdf_main.cpp  ogdf_mainhs.cpp  ogdf_maxsat.cpp  ogdf_solver.cpp  ogdf_subsetrefine.cpp  ogdf_treewidth.cpp  ogdf_validator.cpp  ogdf_vcreductions.cpp  partition.cpp  preprocessing.cpp  readinstance.cpp
playground/c++/src/ogdf_solver/: sol_evalmaxsat.cpp  sol_uwrmaxsat.cpp
playground/python/: bicomps.py  graph_properties.csv  graphproperties.py  vcgraph.gr  vcgraph.py  visgraph.py
python/: graph_properties.csv  graphproperties.py  runcluster.py  solvertester.py
src/: exactsolver.cpp  ogdf_instance.cpp  ogdf_io.cpp  ogdf_solver.cpp  ogdf_subsetrefine.cpp  ogdf_treewidth.cpp  ogdf_validator.cpp  partition.cpp  preprocessing.cpp  readinstance.cpp
src/ogdf_solver/: satcache.cpp  sol_evalmaxsat.cpp  sol_greedy.cpp  sol_gurobi.cpp  sol_ortools.cpp
